<resources>
    <string name="app_name">StayFocused!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="menu_todo">Todo</string>
    <string name="menu_login">Login</string>
    <string name="menu_record">Record</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_todo">TodoActivity</string>
    <string name="empty_not_saved">Todo List not saved because it is empty.</string>
    <string name="password_hint">Set your Password</string>
    <string name="email_hint">Enter your Email</string>
    <string name="login_button_label">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_title">Error!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="google_button_text">"Sign in using Google"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tmp_set_focus">Focus</string>
    <string name="ui_button_cancel">Cancel</string>
    <string name="ui_button_start">Start</string>
    <string name="ui_button_interrupt">Interrupt</string>
    <string name="ui_button_terminate">Terminate</string>
    <string name="congratulations">Congratulations!</string>
</resources>
