<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:gravity="center_vertical"
    tools:context=".LogInActivity">

<!--    <TextView-->
<!--        android:id="@+id/t"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text=""-->
<!--        android:textSize="50dp"-->
<!--        android:layout_marginBottom="20dp"/>-->

   <EditText
       android:id="@+id/emailField"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/email_hint"
       android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_below="@+id/emailField"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:text="@string/login_button_label" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:text="@string/sign_up_button_label"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLogInButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>